--- a/Social Calc/AndroidManifest.xml
+++ b/Social Calc/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:icon="@drawable/temp_icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity
             android:name=".SocialCalcActivity"
             android:label="@string/app_name" >
@@ -18,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="SettingsActivity" android:label="@string/settings"></activity>
+        <activity android:name="HelpActivity" android:label="@string/help"></activity>
     </application>
 
 </manifest>
