--- a/Social Calc/AndroidManifest.xml
+++ b/Social Calc/AndroidManifest.xml
@@ -4,11 +4,12 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="15" />
+    <uses-sdk android:maxSdkVersion="15" android:minSdkVersion="10" />
+    
 
     <application
         android:icon="@drawable/temp_icon"
-        android:label="@string/app_name" android:debuggable="true">
+        android:label="@string/app_name" android:debuggable="false">
         <activity
             android:name=".SocialCalcActivity"
             android:label="@string/app_name" >
