--- a/Social Calc/AndroidManifest.xml
+++ b/Social Calc/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="0.1" >
 
     <uses-sdk android:maxSdkVersion="15" android:minSdkVersion="15" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     
 
     <application
